[package]
name = "pktreplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luomu-libpcap = {git= "https://github.com/sensorfu/luomu-libpcap", rev="e9688270930229d77a1d6f4f34a8e45f43a31e42"}
anyhow = { version = "1"}
clap = {version="4.4", features=["derive"]}
signal-hook = {version="^0.3"}
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
