[package]
name = "pktreplay"
version = "0.1.1"
edition = "2021"
authors = ["SensorFleet R&D <rd.contact@sensorfleet.com>"]
homepage = "https://github.com/sensorfleet/pktreplay"
repository = "https://github.com/sensorfleet/pktreplay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luomu-libpcap = {git= "https://github.com/sensorfu/luomu-libpcap", rev="1184f4e5b4e9cedd2a6fdaf4ed0401f371ace8f4"}
anyhow = { version = "1"}
clap = {version="4.5", features=["derive"]}
signal-hook = {version="^0.3"}
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
